Package_Tools/include-C/flint/in_arbeit/pp/arb.pp

procedure _arb_vec_add_error_mag_vec(res:Tarb_ptr; err:Tmag_srcptr; len:Tslong);cdecl;external;
procedure _arb_vec_indeterminate(vec:Tarb_ptr; len:Tslong);cdecl;external;
procedure _arb_vec_trim(res:Tarb_ptr; vec:Tarb_srcptr; len:Tslong);cdecl;external;
function _arb_vec_get_unique_fmpz_vec(res:Pfmpz; vec:Tarb_srcptr; len:Tslong):longint;cdecl;external;
{ arctangent implementation  }
const
  ARB_ATAN_TAB1_BITS = 8;  
  ARB_ATAN_TAB1_PREC = 512;  
  ARB_ATAN_TAB1_LIMBS = ARB_ATAN_TAB1_PREC/FLINT_BITS;  
  ARB_ATAN_TAB21_BITS = 5;  
  ARB_ATAN_TAB22_BITS = 5;  
  ARB_ATAN_TAB2_PREC = 4608;  
  ARB_ATAN_TAB2_LIMBS = ARB_ATAN_TAB2_PREC/FLINT_BITS;  
(* Const before type ignored *)
  var
    arb_atan_tab1 : array[0..(1 shl ARB_ATAN_TAB1_BITS)-1] of array[0..(ARB_ATAN_TAB1_LIMBS)-1] of Tmp_limb_t;cvar;external;
(* Const before type ignored *)
    arb_atan_tab21 : array[0..(1 shl ARB_ATAN_TAB21_BITS)-1] of array[0..(ARB_ATAN_TAB2_LIMBS)-1] of Tmp_limb_t;cvar;external;
(* Const before type ignored *)
    arb_atan_tab22 : array[0..(1 shl ARB_ATAN_TAB22_BITS)-1] of array[0..(ARB_ATAN_TAB2_LIMBS)-1] of Tmp_limb_t;cvar;external;
(* Const before type ignored *)
    arb_atan_pi2_minus_one : array[0..(ARB_ATAN_TAB2_LIMBS)-1] of Tmp_limb_t;cvar;external;

procedure _arb_atan_taylor_naive(y:Tmp_ptr; error:Pmp_limb_t; x:Tmp_srcptr; xn:Tmp_size_t; N:Tulong; 
            alternating:longint);cdecl;external;
procedure _arb_atan_taylor_rs(y:Tmp_ptr; error:Pmp_limb_t; x:Tmp_srcptr; xn:Tmp_size_t; N:Tulong; 
            alternating:longint);cdecl;external;
const
  ARB_ATAN_NEWTON_PREC = 3400;  
(* Const before type ignored *)

procedure arb_atan_newton(res:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_atan_arf_newton(res:Tarb_t; x:Tarf_t; prec:Tslong);cdecl;external;
{ logarithm implementation  }
const
  ARB_LOG_TAB11_BITS = 7;  
  ARB_LOG_TAB12_BITS = 7;  
  ARB_LOG_TAB1_PREC = 512;  
  ARB_LOG_TAB1_LIMBS = ARB_LOG_TAB1_PREC/FLINT_BITS;  
  ARB_LOG_TAB21_BITS = 5;  
  ARB_LOG_TAB22_BITS = 5;  
  ARB_LOG_TAB2_PREC = 4608;  
  ARB_LOG_TAB2_LIMBS = ARB_LOG_TAB2_PREC/FLINT_BITS;  
(* Const before type ignored *)
  var
    arb_log_tab11 : array[0..(1 shl ARB_LOG_TAB11_BITS)-1] of array[0..(ARB_LOG_TAB1_LIMBS)-1] of Tmp_limb_t;cvar;external;
(* Const before type ignored *)
    arb_log_tab12 : array[0..(1 shl ARB_LOG_TAB12_BITS)-1] of array[0..(ARB_LOG_TAB1_LIMBS)-1] of Tmp_limb_t;cvar;external;
(* Const before type ignored *)
    arb_log_tab21 : array[0..(1 shl ARB_LOG_TAB21_BITS)-1] of array[0..(ARB_LOG_TAB2_LIMBS)-1] of Tmp_limb_t;cvar;external;
(* Const before type ignored *)
    arb_log_tab22 : array[0..(1 shl ARB_LOG_TAB22_BITS)-1] of array[0..(ARB_LOG_TAB2_LIMBS)-1] of Tmp_limb_t;cvar;external;
(* Const before type ignored *)
    arb_log_log2_tab : Tmp_srcptr;cvar;external;
(* Const before type ignored *)

procedure arb_log_newton(res:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_log_arf_newton(res:Tarb_t; x:Tarf_t; prec:Tslong);cdecl;external;
{ logarithms of primes  }
const
  ARB_LOG_PRIME_CACHE_NUM = 13;  
(* Const before type ignored *)
  var
    arb_log_p_tab : array[0..(ARB_LOG_PRIME_CACHE_NUM)-1] of array[0..(ARB_LOG_TAB2_LIMBS)-1] of Tmp_limb_t;cvar;external;

procedure arb_log_primes_vec_bsplit(res:Tarb_ptr; n:Tslong; prec:Tslong);cdecl;external;
procedure _arb_log_p_ensure_cached(prec:Tslong);cdecl;external;
function _arb_log_p_cache_vec:Tarb_srcptr;cdecl;external;
{ exponential implementation  }
{ only goes up to log(2) * 256  }
const
  ARB_EXP_TAB1_NUM = 178;  
  ARB_EXP_TAB1_BITS = 8;  
  ARB_EXP_TAB1_PREC = 512;  
  ARB_EXP_TAB1_LIMBS = ARB_EXP_TAB1_PREC/FLINT_BITS;  
{ only goes up to log(2) * 32  }
  ARB_EXP_TAB21_NUM = 23;  
  ARB_EXP_TAB21_BITS = 5;  
  ARB_EXP_TAB22_NUM = 1 shl ARB_EXP_TAB22_BITS;  
  ARB_EXP_TAB22_BITS = 5;  
  ARB_EXP_TAB2_PREC = 4608;  
  ARB_EXP_TAB2_LIMBS = ARB_EXP_TAB2_PREC/FLINT_BITS;  
(* Const before type ignored *)
  var
    arb_exp_tab1 : array[0..(ARB_EXP_TAB1_NUM)-1] of array[0..(ARB_EXP_TAB1_LIMBS)-1] of Tmp_limb_t;cvar;external;
(* Const before type ignored *)
    arb_exp_tab21 : array[0..(ARB_EXP_TAB21_NUM)-1] of array[0..(ARB_EXP_TAB2_LIMBS)-1] of Tmp_limb_t;cvar;external;
(* Const before type ignored *)
    arb_exp_tab22 : array[0..(ARB_EXP_TAB22_NUM)-1] of array[0..(ARB_EXP_TAB2_LIMBS)-1] of Tmp_limb_t;cvar;external;

procedure _arb_exp_taylor_naive(y:Tmp_ptr; error:Pmp_limb_t; x:Tmp_srcptr; xn:Tmp_size_t; N:Tulong);cdecl;external;
procedure _arb_exp_taylor_rs(y:Tmp_ptr; error:Pmp_limb_t; x:Tmp_srcptr; xn:Tmp_size_t; N:Tulong);cdecl;external;
(* Const before type ignored *)
procedure arb_exp_arf_bb(z:Tarb_t; x:Tarf_t; prec:Tslong; minus_one:longint);cdecl;external;
(* Const before type ignored *)
procedure arb_exp_arf_rs_generic(res:Tarb_t; x:Tarf_t; prec:Tslong; minus_one:longint);cdecl;external;
(* Const before type ignored *)
function _arb_get_mpn_fixed_mod_log2(w:Tmp_ptr; q:Tfmpz_t; error:Pmp_limb_t; x:Tarf_t; wn:Tmp_size_t):longint;cdecl;external;
function _arb_exp_taylor_bound(mag:Tslong; prec:Tslong):Tslong;cdecl;external;
(* Const before type ignored *)
procedure _arb_exp_sum_bs_powtab(T:Tfmpz_t; Q:Tfmpz_t; Qexp:Pflint_bitcnt_t; x:Tfmpz_t; r:Tflint_bitcnt_t; 
            N:Tslong);cdecl;external;
(* Const before type ignored *)
procedure _arb_exp_sum_bs_simple(T:Tfmpz_t; Q:Tfmpz_t; Qexp:Pflint_bitcnt_t; x:Tfmpz_t; r:Tflint_bitcnt_t; 
            N:Tslong);cdecl;external;
const
  ARB_LOG_REDUCTION_DEFAULT_MAX_PREC = 4000000;  
  ARB_EXP_LOG_REDUCTION_PREC = 2240;  
  ARB_LOG_NEWTON_PREC = 2800;  
(* Const before type ignored *)

procedure arb_exp_arf_log_reduction(res:Tarb_t; x:Tarf_t; prec:Tslong; minus_one:longint);cdecl;external;
(* Const before type ignored *)
procedure arb_exp_arf_generic(z:Tarb_t; x:Tarf_t; prec:Tslong; minus_one:longint);cdecl;external;
(* Const before type ignored *)
procedure arb_exp_arf(z:Tarb_t; x:Tarf_t; prec:Tslong; minus_one:longint; maglim:Tslong);cdecl;external;
{ sin/cos implementation  }
{ only goes up to (pi/4) * 256  }
const
  ARB_SIN_COS_TAB1_NUM = 203;  
  ARB_SIN_COS_TAB1_BITS = 8;  
  ARB_SIN_COS_TAB1_PREC = 512;  
  ARB_SIN_COS_TAB1_LIMBS = ARB_SIN_COS_TAB1_PREC/FLINT_BITS;  
{ only goes up to (pi/4) * 32  }
  ARB_SIN_COS_TAB21_NUM = 26;  
  ARB_SIN_COS_TAB21_BITS = 5;  
  ARB_SIN_COS_TAB22_NUM = 1 shl ARB_SIN_COS_TAB22_BITS;  
  ARB_SIN_COS_TAB22_BITS = 5;  
  ARB_SIN_COS_TAB2_PREC = 4608;  
  ARB_SIN_COS_TAB2_LIMBS = ARB_SIN_COS_TAB2_PREC/FLINT_BITS;  
(* Const before type ignored *)
  var
    arb_sin_cos_tab1 : array[0..(2*ARB_SIN_COS_TAB1_NUM)-1] of array[0..(ARB_SIN_COS_TAB1_LIMBS)-1] of Tmp_limb_t;cvar;external;
(* Const before type ignored *)
    arb_sin_cos_tab21 : array[0..(2*ARB_SIN_COS_TAB21_NUM)-1] of array[0..(ARB_SIN_COS_TAB2_LIMBS)-1] of Tmp_limb_t;cvar;external;
(* Const before type ignored *)
    arb_sin_cos_tab22 : array[0..(2*ARB_SIN_COS_TAB22_NUM)-1] of array[0..(ARB_SIN_COS_TAB2_LIMBS)-1] of Tmp_limb_t;cvar;external;

const
  ARB_PI4_TAB_LIMBS = 4608/FLINT_BITS;  
(* Const before type ignored *)
  var
    arb_pi4_tab : array[0..(ARB_PI4_TAB_LIMBS)-1] of Tmp_limb_t;cvar;external;

procedure _arb_sin_cos_taylor_naive(ysin:Tmp_ptr; ycos:Tmp_ptr; error:Pmp_limb_t; x:Tmp_srcptr; xn:Tmp_size_t; 
            N:Tulong);cdecl;external;
procedure _arb_sin_cos_taylor_rs(ysin:Tmp_ptr; ycos:Tmp_ptr; error:Pmp_limb_t; x:Tmp_srcptr; xn:Tmp_size_t; 
            N:Tulong; sinonly:longint; alternating:longint);cdecl;external;
(* Const before type ignored *)
function _arb_get_mpn_fixed_mod_pi4(w:Tmp_ptr; q:Tfmpz_t; octant:Plongint; error:Pmp_limb_t; x:Tarf_t; 
           wn:Tmp_size_t):longint;cdecl;external;
(* Const before type ignored *)
procedure arb_sin_cos_arf_bb(zsin:Tarb_t; zcos:Tarb_t; x:Tarf_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_sin_cos_arf_rs_generic(res_sin:Tarb_t; res_cos:Tarb_t; x:Tarf_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_sin_cos_arf_generic(res_sin:Tarb_t; res_cos:Tarb_t; x:Tarf_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure _arb_sin_cos_wide(s:Tarb_t; c:Tarb_t; x:Tarf_t; r:Tmag_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_sin_cos_wide(s:Tarb_t; c:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure _arb_sin_cos_generic(s:Tarb_t; c:Tarb_t; x:Tarf_t; xrad:Tmag_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_sin_cos_generic(s:Tarb_t; c:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
procedure arb_atan_gauss_primes_vec_bsplit(res:Tarb_ptr; n:Tslong; prec:Tslong);cdecl;external;
const
  ARB_ATAN_GAUSS_PRIME_CACHE_NUM = 13;  
  ARB_SIN_COS_ATAN_REDUCTION_DEFAULT_MAX_PREC = 4000000;  
  ARB_SIN_COS_ATAN_REDUCTION_PREC = 2600;  
(* Const before type ignored *)
  var
    arb_atan_gauss_tab : array[0..(ARB_ATAN_GAUSS_PRIME_CACHE_NUM)-1] of array[0..(ARB_ATAN_TAB2_LIMBS)-1] of Tmp_limb_t;cvar;external;

procedure _arb_atan_gauss_p_ensure_cached(prec:Tslong);cdecl;external;
function _arb_atan_gauss_p_cache_vec:Tarb_srcptr;cdecl;external;
(* Const before type ignored *)
procedure arb_sin_cos_arf_atan_reduction(res1:Tarb_t; res2:Tarb_t; x:Tarf_t; prec:Tslong);cdecl;external;
function _arb_mpn_leading_zeros(d:Tmp_srcptr; n:Tmp_size_t):Tflint_bitcnt_t;cdecl;external;
(* Const before type ignored *)
procedure _arb_atan_sum_bs_simple(T:Tfmpz_t; Q:Tfmpz_t; Qexp:Pflint_bitcnt_t; x:Tfmpz_t; r:Tflint_bitcnt_t; 
            N:Tslong);cdecl;external;
(* Const before type ignored *)
procedure _arb_atan_sum_bs_powtab(T:Tfmpz_t; Q:Tfmpz_t; Qexp:Pflint_bitcnt_t; x:Tfmpz_t; r:Tflint_bitcnt_t; 
            N:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_atan_arf_bb(z:Tarb_t; x:Tarf_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_atan_frac_bsplit(s:Tarb_t; p:Tfmpz_t; q:Tfmpz_t; hyperbolic:longint; prec:Tslong);cdecl;external;
(* Const before type ignored *)
function arb_allocated_bytes(x:Tarb_t):Tslong;cdecl;external;
function _arb_vec_allocated_bytes(vec:Tarb_srcptr; len:Tslong):Tslong;cdecl;external;
function _arb_vec_estimate_allocated_bytes(len:Tslong; prec:Tslong):Tdouble;cdecl;external;
(* Const before type ignored *)
function arb_load_str(res:Tarb_t; data:Pchar):longint;cdecl;external;
(* Const before type ignored *)
function arb_dump_str(x:Tarb_t):Pchar;cdecl;external;
{$ifdef FLINT_HAVE_FILE}
function arb_load_file(res:Tarb_t; stream:PFILE):longint;cdecl;external;
(* Const before type ignored *)
function arb_dump_file(stream:PFILE; x:Tarb_t):longint;cdecl;external;
{$endif}
{$endif}

implementation

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function arb_midref(x : longint) : longint;
begin
  arb_midref:=@(x^.mid);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function arb_radref(x : longint) : longint;
begin
  arb_radref:=@(x^.rad);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function ARB_IS_LAGOM(x : longint) : longint;
begin
  ARB_IS_LAGOM:=(ARF_IS_LAGOM(arb_midref(x))) and (@(MAG_IS_LAGOM(arb_radref(x))));
end;

{ was #define dname def_expr }
function ARB_STR_MORE : longint; { return type might be wrong }
  begin
    ARB_STR_MORE:=UWORD(1);
  end;

{ was #define dname def_expr }
function ARB_STR_NO_RADIUS : longint; { return type might be wrong }
  begin
    ARB_STR_NO_RADIUS:=UWORD(2);
  end;

{ was #define dname def_expr }
function ARB_STR_CONDENSE : longint; { return type might be wrong }
  begin
    ARB_STR_CONDENSE:=UWORD(16);
  end;


end.
